[package]
name = "range_proof"
version = "0.1.0"
authors = ["Rohit Narurkar <rohitnarurkar@gmail.com>"]
edition = "2018"

[dev-dependencies]
typename = "0.1.2"

[dependencies]
ark-bls12-381 = "0.4.0"
bitvec = "0.17.4"
bls12_381 = "0.1.1"
failure = "0.1.7"
ark-ff = "0.4.1"
ark-ec = "0.4.2"
ark-poly = "0.4.2"
merlin = "2.0.0"
num-bigint = "0.2.6"
num-traits = { version = "0.2", default-features = true }
ark-poly-commit = "0.4.0"
rand = "0.7.3"
rand_chacha = "0.2"
rand_core = "0.5.1"
ark-std = "0.4.0"
ark-serialize = "0.4.1"
